# nbis

./: CMakeLists.txt
bozorth3/: CMakeLists.txt
commonnbis/: CMakeLists.txt
commonnbis/include/: jconfig.h
commonnbis/src/lib/cblas/: isamax.c
commonnbis/src/lib/fet/: nistcom.c
commonnbis/src/lib/fft/: fft2dr.c  little.c  little.h  passb.c  passf.c
ijg/: CMakeLists.txt
imgtools/: CMakeLists.txt
imgtools/include/: imgtype.h  jpegl.h  wsq.h
imgtools/src/lib/ihead/: prntihdr.c  writihdr.c
imgtools/src/lib/image/: bincopy.c  dilate.c  grp4comp.c  imgdecod.c  imgtype.c  readihdr.c
imgtools/src/lib/jpegl/: huff.c
imgtools/src/lib/wsq/: cropcoeff.c  sd14util.c
mindtct/: CMakeLists.txt
mindtct/include/: lfs.h
mindtct/src/lib/mindtct/: block.c  loop.c  morph.c  results.c
